Attempt 2 - production bug on iphones whereby media-scroller not scrolling. Changed media-scroller overflow from auto to scroll.

--- a/c2_main_app/static/c2_main_app/styles/_home-products.scss
+++ b/c2_main_app/static/c2_main_app/styles/_home-products.scss
@@ -6,7 +6,7 @@
     grid-auto-flow: column;
     grid-auto-columns: var(--product-cols--);
     padding: 0 0 5rem 0;
-    overflow-x: auto;
+    overflow-x: scroll;
     scroll-behavior: smooth;
     overscroll-behavior-inline: contain;
     margin-left: var(--edge-margin--);
